--- a/portal/assets/css/ynhpanel.css
+++ b/portal/assets/css/ynhpanel.css
@@ -137,7 +137,7 @@ body {/*overflow-y: scroll;*/}
 #ynhoverlay a { text-decoration: none; }
 
 
-#ynhoverlay .wrapper {
+#ynhoverlay .ynh-wrapper {
   width: 90%;
   margin: 2% 5%;
           transition: all 0.2s ease;
@@ -145,9 +145,9 @@ body {/*overflow-y: scroll;*/}
   -webkit-transition: all 0.2s ease;
   z-index: 10;
 }
-#ynhoverlay .wrapper:before,
-#ynhoverlay .wrapper:after {content: " ";display: table;}
-#ynhoverlay .wrapper:after {clear: both;}
+#ynhoverlay .ynh-wrapper:before,
+#ynhoverlay .ynh-wrapper:after {content: " ";display: table;}
+#ynhoverlay .ynh-wrapper:after {clear: both;}
 
 /* ******************************************************************
   Button
